--- a/css/style.css
+++ b/css/style.css
@@ -26,22 +26,24 @@ h1, h3, h4, p{
 }
 
 .div01 p{
-    font-size: 1.3em;
+    font-size: 1.4em;
     margin-top: 2%;
+    padding: 1% 3% 1% 3%;
+    line-height: 1.2;
 }
 
 /*DIV CURRICULUM*/
 .div02{
     width: 100%;
     float: left;
-    padding: 3% 4%;
+    padding: 4% 4% 2% 4%;
     box-sizing: border-box;
 }
 
 .curriculum{
     width: 100%;
     text-align: center;
-    background-color: rgba(10,23,55,0.5);
+    background-color: rgba(233, 235, 125, 0.5);
     border-radius: 7px;
     margin-bottom: 3%;
 }
@@ -55,14 +57,14 @@ h1, h3, h4, p{
 .div03{
     width: 100%;
     float: left;
-    padding: 3% 4%;
+    padding: 4% 4% 2% 4%;
     box-sizing: border-box;
 }
 
 .projetos{
     width: 100%;
     text-align: center;
-    background-color: rgba(10,23,55,0.5);
+    background-color: rgba(105, 210, 236, 0.5);
     border-radius: 7px;
     margin-bottom: 3%;
 }
@@ -71,7 +73,6 @@ h1, h3, h4, p{
     border-radius: 7px 7px 0 0;
     width: 100%;    
 }
-
 
 /*COMUM CURRICULUM E PROJETOS*/
 .inner{
@@ -83,6 +84,35 @@ h1, h3, h4, p{
 }
 
 .inner p{
-    margin-top: 5%;
-    font-size: 1.5em;
+    margin-top: 2%;
+    font-size: 1.4em;
+}
+
+/*RODAPÉ*/
+.rodape{
+    width: 100%;
+    text-align: center;
+    float: left;
+    padding: 3% 3%;
+    background-color: rgb(34, 31, 31);
+}
+
+.social a{
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 2em;
+    margin-right: 3%;    
+}
+
+.social a:last-child{
+    margin-right: 0;
+}
+
+.social a:hover{
+    color: rgba(255, 255, 255);
+    transition: 1s;
+}
+
+.copyright{
+    margin-top: 3%;
+    color: rgba(255, 255, 255);
 }
