--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ h1, h3, h4, p{
 .curriculum{
     width: 100%;
     text-align: center;
-    background-color: rgba(233, 235, 125, 0.5);
+    background-color: rgba(233, 235, 125, 0.3);
     border-radius: 7px;
     margin-bottom: 3%;
 }
@@ -64,7 +64,7 @@ h1, h3, h4, p{
 .projetos{
     width: 100%;
     text-align: center;
-    background-color: rgba(105, 210, 236, 0.5);
+    background-color: rgba(105, 210, 236, 0.3);
     border-radius: 7px;
     margin-bottom: 3%;
 }
@@ -81,11 +81,31 @@ h1, h3, h4, p{
 
 .inner h4{
     font-size: 1.7em;
+    text-shadow: 1px 1px 1px rgb(27, 27, 27);
 }
 
 .inner p{
     margin-top: 2%;
     font-size: 1.4em;
+    line-height: 1.2;
+    text-shadow: 1px 1px 1px rgb(27, 27, 27);
+}
+
+.btn{
+    background-color: rgba(92, 81, 187, 0.7);
+    color: #fff;
+    font-size: 1.2em;
+    padding: 10px 25px ;
+    margin: 3%;
+    border: none;
+    border-radius: 7px;
+}
+
+.btn:hover{
+    background-color: rgba(238, 141, 14, 0.74);
+    border-radius: 7px 0 7px 0;
+    transition: 1.5s;
+    cursor: pointer; 
 }
 
 /*RODAPÉ*/
@@ -93,7 +113,7 @@ h1, h3, h4, p{
     width: 100%;
     text-align: center;
     float: left;
-    padding: 3% 3%;
+    padding: 3% 0 3% 0;
     background-color: rgb(34, 31, 31);
 }
 
