--- a/css/style.css
+++ b/css/style.css
@@ -16,16 +16,25 @@ h1, h3, h4, p{
     text-align: center;
 }
 
-.div01 h1{
+.imgdener img{
+    display: block;
+    width: 280px;
+    background-repeat: no-repeat;
+    margin-left: auto;   
+    margin-right: auto;
+}
+
+h1{
     font-size: 2.0em;
-    margin: 7% 7%;
+    padding: 7% 7% 3% 7%;
 }
 
-.div01 h3{
+h3{
     font-size: 1.5em;
+    background-color:blue;
 }
 
-.div01 p{
+p{
     font-size: 1.4em;
     margin-top: 2%;
     padding: 1% 3% 1% 3%;
