--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -1,12 +1,9 @@
 /*Página do Currículo */
 .section-cv{
-    font-family: 'Roboto', sans-serif;
+    font: normal 16px 'Roboto', sans-serif;
     padding: 20px;
     background-color: rgba(211, 212, 250, 0.726);
-}
-
-.section-cv h3, p{
-    color: black;
+    color: #000;
 }
 
 .section-cv p{
@@ -34,31 +31,66 @@
     line-height: 1.3;
 }
 
+.informacoes a{
+    color: #000;
+}
+
+.informacoes a:link, a:visited {
+        text-decoration: none
+ }
+ 
+ .informacoes a:hover{
+    text-decoration: underline; 
+    color: blue;
+}
+
+.informacoes a:active {
+    text-decoration: none;
+}
+
 .cabecalho h3{
-    font-size: 1.6em;
+    font-size: 1.7rem;
     text-align: center;
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .section-cv h4{
-    background: grey;
+    background: rgb(192, 191, 191);
     font-size: 20px;
     text-align: center;
     margin-top: 25px;
 }
 
-.lista{
+.lista ul{
     font-size: 19px;
     color: black;
     margin-left: 5px;
     margin-right: 5px;
+    margin-top: 5px;
     line-height: 1.3;
 }
 
 @media (max-width: 600px){
-    .lista{
+    .lista ul{
         display: grid;
-        grid-template-columns: 200px 200px;
+        grid-template-columns: 170px 170px;
     }
+}
+
+.btn-imprimir{
+    background-color: rgba(92, 81, 187, 0.7);
+    color: #fff;
+    font-size: 1.2rem;
+    padding: 10px 25px ;
+    margin: 3%;
+    border: none;
+    border-radius: 7px;
+}
+
+.btn-imprimir:hover{
+    background-color: rgba(238, 141, 14, 0.74);
+    border-radius: 7px 0 7px 0;
+    transition: 1.5s;
+    cursor: pointer; 
 }
