--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,26 @@
 /*CORPO*/
 body{
-    font-family: 'Roboto', sans-serif;
+    font: normal 16px 'Roboto', sans-serif;
+    color: #fff;
 }
+
+a{
+    color: rgb(201, 194, 194);
+}
+
+a:link, a:visited {
+        text-decoration: none
+}
+ 
+a:hover{
+    text-decoration: underline; 
+    color: white;
+}
+
+a:active {
+    text-decoration: none;
+}
+
 
 /*SEÇÃO 01*/
 .section-01{
@@ -25,16 +44,16 @@ h1, h3, h4, p{
 }
 
 h1{
-    font-size: 2.0em;
+    font-size: 2.0rem;
     padding: 7% 7% 3% 7%;
 }
 
 h3{
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 p{
-    font-size: 1.4em;
+    font-size: 1.4rem;
     margin-top: 2%;
     padding: 1% 3% 1% 3%;
     line-height: 1.2;
@@ -88,13 +107,13 @@ p{
 }
 
 .inner h4{
-    font-size: 1.7em;
+    font-size: 1.7rem;
     text-shadow: 1px 1px 1px rgb(27, 27, 27);
 }
 
 .inner p{
     margin-top: 2%;
-    font-size: 1.4em;
+    font-size: 1.4rem;
     line-height: 1.2;
     text-shadow: 1px 1px 1px rgb(27, 27, 27);
 }
@@ -102,7 +121,7 @@ p{
 .btn{
     background-color: rgba(92, 81, 187, 0.7);
     color: #fff;
-    font-size: 1.2em;
+    font-size: 1.2rem;
     padding: 10px 25px ;
     margin: 3%;
     border: none;
@@ -127,8 +146,8 @@ p{
 
 .social a{
     color: rgba(255, 255, 255, 0.7);
-    font-size: 2em;
-    margin-right: 3%;    
+    font-size: 2.5rem;
+    margin-right: 20px;    
 }
 
 .social a:last-child{
@@ -140,7 +159,14 @@ p{
     transition: 1s;
 }
 
-.copyright{
-    margin-top: 3%;
-    color: rgba(255, 255, 255);
+.copyright p{
+    font-size: 16px;
+    color: rgb(201, 194, 194);
+}
+
+.mapa{
+    color: rgb(201, 194, 194);
+    font-size: 16px;
+    margin-top: 10px;
+    border: #fff 1px;
 }
