--- a/css/style.css
+++ b/css/style.css
@@ -137,15 +137,19 @@ p{
 
 /*RODAPÉ*/
 .rodape{
+    color: rgb(201, 194, 194);
     width: 100%;
     text-align: center;
-    float: left;
-    padding: 3% 0 3% 0;
+    padding: 15px 0 15px 0;
     background-color: rgb(34, 31, 31);
 }
 
+.rodape p, a{
+    color: rgb(201, 194, 194);
+}
+
 .social a{
-    color: rgba(255, 255, 255, 0.7);
+    color: rgb(201, 194, 194);
     font-size: 2.5rem;
     margin-right: 20px;    
 }
@@ -159,14 +163,24 @@ p{
     transition: 1s;
 }
 
-.copyright p{
-    font-size: 16px;
-    color: rgb(201, 194, 194);
+.navegacao{
+    background: blue;
+    font-size: 1.3rem;
+    margin-top: 10px;
 }
 
-.mapa{
+.contatos P{
+    font-size: 1.3rem;
+    margin-top: 0;
+    padding: 0;
+    line-height: 1.5;
+}
+
+.contatos h2{
+    padding-top: 15px;
+}
+
+.copyright p{
+    font-size: 1.2rem;
     color: rgb(201, 194, 194);
-    font-size: 16px;
-    margin-top: 10px;
-    border: #fff 1px;
 }
