--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,11 @@ p{
     color: rgb(201, 194, 194);
 }
 
+.rodape h2{
+    color: rgba(255, 255, 255);
+    font-size: 1.7rem;
+}
+
 .social a{
     color: rgb(201, 194, 194);
     font-size: 2.5rem;
@@ -164,7 +169,6 @@ p{
 }
 
 .navegacao{
-    background: blue;
     font-size: 1.3rem;
     margin-top: 10px;
 }
