--- a/css/projetos.css
+++ b/css/projetos.css
@@ -5,15 +5,21 @@ body{
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	font-family: consolas;
+	font: normal 16px consolas;
 }
 
 h1{
+	font: normal 2rem consolas;
 	padding-top: 20px;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 h3{
 	padding-top: 10px;
+	margin-left: 15px;
+	margin-right: 15px;
+
 }
 
 .flex{
@@ -103,6 +109,7 @@ h3{
 .container .box .content p{
 	margin-top: 10px;
 	margin-bottom: 10px;
+	font-size: 1rem;
 }
 
 .container .box:hover .content h2{
