--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -80,16 +80,16 @@ body a:link, a:visited {
     line-height: 1.3;
 }
 
-@media (max-width: 600px){
+/*@media (max-width: 600px){
     .lista ul{
         display: grid;
         grid-template-columns: 145px 145px;
     }
-}
+}*/
 
 .btn-imprimir{
     text-align: center;
-    margin-top: 15px;
+    margin-top: 55px;
 }
 
 .btn-imprimir button{
@@ -97,7 +97,6 @@ body a:link, a:visited {
     color: rgb(15, 15, 15);
     font-size: 1.2rem;
     padding: 10px 25px ;
-    margin: 3%;
     border: none;
     border-radius: 7px;
 }
@@ -146,7 +145,63 @@ body a:link, a:visited {
 }
 
 .copyright p{
-    font-size: 1.1rem;
-    padding-top: 20px;
+    font-size: 1rem;
     color: rgb(15, 15, 15);
+    text-align: center;
+    padding: 15px 0 15px 0;
+    background-color: rgb(192, 191, 191);
+}
+
+/*MEDIA DESKTOP SECTION*/
+@media (min-width: 900px){
+    .section-cv{
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px 80px 20px 80px;
+    }
+    .section-cv p{
+        text-align: justify;
+    }
+    .cabecalho{
+        display: grid;
+        grid-template-columns: 200px 1fr;
+        grid-gap: 50px;
+
+    }
+    .cabecalho h3{
+        text-align: left;
+    }
+    .cabecalho img{
+        margin-left: 20px;
+    }
+}
+
+/*MEDIA LISTA*/
+@media (min-width: 360px){
+    .lista ul{
+        display: grid;
+        grid-template-columns: 145px 145px;
+    }
+}
+
+@media (min-width: 480px){
+    .lista ul{
+        display: grid;
+        grid-template-columns: 155px 155px 155px;
+    }
+}
+
+/*MEDIA DESKTOP RODAPE*/
+@media (min-width: 910px){
+    .rodape{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 20px;
+    }
+    .social{
+        padding-left: 20px;
+    }
+    .contatos{
+        padding-right: 20px;
+    }
 }
