--- a/css/projetos.css
+++ b/css/projetos.css
@@ -191,12 +191,17 @@ text-decoration: none
 @media (min-width: 910px){
     .rodape{
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 300px 300px 300px;
         grid-gap: 20px;
+        align-items: center;
+        justify-content: center;
     }
     .social{
         padding-left: 20px;
-    }
+	}
+	.navegacao{
+		margin: 0;
+	}
     .contatos{
         padding-right: 20px;
     }
