--- a/css/style.css
+++ b/css/style.css
@@ -49,13 +49,13 @@ h1, h4, p{
 
 h1{
     font-size: 2.0rem;
-    padding: 7% 7% 3% 7%;
+    padding: 25px 15px 10px 15px;
 }
 
 p{
     font-size: 1.4rem;
-    margin-top: 2%;
-    padding: 1% 3% 1% 3%;
+    margin-top: 15px;
+    padding: 5px 15px 5px 15px;
     line-height: 1.2;
 }
 
@@ -103,7 +103,7 @@ p{
 
 /*COMUM CURRICULUM E PROJETOS*/
 .inner{
-    padding: 2%;
+    padding: 10px;
 }
 
 .inner h4{
@@ -123,7 +123,7 @@ p{
     color: #fff;
     font-size: 1.2rem;
     padding: 10px 25px ;
-    margin: 3%;
+    margin: 10px;
     border: none;
     border-radius: 7px;
 }
@@ -140,7 +140,7 @@ p{
     color: rgb(201, 194, 194);
     width: 100%;
     text-align: center;
-    padding: 15px 0 15px 0;
+    padding-top: 20px;
     background-color: rgb(34, 31, 31);
 }
 
@@ -157,6 +157,11 @@ p{
     color: rgb(201, 194, 194);
     font-size: 2.5rem;
     margin-right: 20px;    
+
+}
+
+.social p{
+    margin-top: 0;
 }
 
 .social a:last-child{
@@ -190,7 +195,32 @@ p{
 }
 
 .copyright p{
-    font-size: 1.1rem;
+    font-size: 1rem;
+    margin-top: 0;
+    padding-top: 25px;
+    padding-bottom: 15px;
     color: rgb(201, 194, 194);
+    background-color: rgb(34, 31, 31);
 }
 
+/*MEDIA DESKTOP RODAPE*/
+@media (min-width: 910px){
+    .rodape{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 20px;
+    }
+    .social{
+        padding-left: 20px;
+    }
+    .navegacao{
+        margin-top: 0;
+    }
+    .contatos{
+        padding-right: 20px;
+    }
+    .contatos h2{
+        padding-top: 0;
+    }
+}
+  
