--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,12 @@ h1{
     padding: 25px 15px 10px 15px;
 }
 
+#apresentacao p{
+    font-family: 'Satisfy', cursive;
+    font-size: 1.7rem;
+    line-height: 1.3;
+}
+
 p{
     font-size: 1.4rem;
     margin-top: 15px;
@@ -70,7 +76,7 @@ p{
 .curriculum{
     width: 100%;
     text-align: center;
-    background-color: rgba(233, 235, 125, 0.3);
+    background-color: rgba(45, 196, 151, 0.3);
     border-radius: 7px;
     margin-bottom: 3%;
 }
@@ -91,7 +97,7 @@ p{
 .projetos{
     width: 100%;
     text-align: center;
-    background-color: rgba(105, 210, 236, 0.3);
+    background-color: rgba(221, 119, 87, 0.3);
     border-radius: 7px;
     margin-bottom: 3%;
 }
@@ -149,7 +155,7 @@ p{
 }
 
 .rodape h2{
-    font: normal 2rem 'Roboto', sans-serif;
+    font: normal 1.6rem 'Roboto', sans-serif;
     color: rgba(255, 255, 255);
 }
 
@@ -183,8 +189,12 @@ p{
     padding-top: 50px;
 }
 
+.navegacao p{
+    font-size: 1.2rem;
+}
+
 .contatos P{
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     margin-top: 0;
     padding: 0;
     line-height: 1.7;
