--- a/css/curriculum.css
+++ b/css/curriculum.css
@@ -27,8 +27,8 @@ body a:link, a:visited {
     line-height: 1.3;
 }
 
-.foto img{
-    width: 200px;
+.cabecalho img{
+    width: 180px;
     background-repeat: no-repeat;
     display: block;
     margin-left: auto;
@@ -173,6 +173,7 @@ body a:link, a:visited {
     }
     .cabecalho img{
         margin-left: 20px;
+        padding-top: 10px;
     }
 }
 
